third_party/move/move-compiler/tests/move_check/typing/ability_constraint_generic_in_field.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/ability_constraint_generic_in_field.move:3:22
  │
2 │     struct S<T: copy> { v: T }
  │                 ---- 'copy' constraint declared here
3 │     struct B<T> { v: S<T> }
  │              -       ^^^^
  │              │       │ │
  │              │       │ The type 'T' does not have the ability 'copy'
  │              │       'copy' constraint not satisifed
  │              To satisfy the constraint, the 'copy' ability would need to be added here

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_generic_in_field.move:10:22
   │
 7 │     struct A<T: copy> has copy { a: T }
   │                 ---- 'copy' constraint declared here
 8 │ 
 9 │     struct B<T> has copy {
   │              - To satisfy the constraint, the 'copy' ability would need to be added here
10 │         data: vector<A<T>>
   │                      ^^^^
   │                      │ │
   │                      │ The type 'T' does not have the ability 'copy'
   │                      'copy' constraint not satisifed

